# LBKEigenvalueSolver

./: .gitignore  CMakeLists.txt  README.md  run.cc
LBKEigenvalueSolver/: lbkes_computeprecursors.cc  lbkes_k_eigenvalue_solver.h  lbkes_main_execute.cc  lbkes_main_initialize.cc
LBKEigenvalueSolver/IterativeMethods/: lbkes_power_iteration.cc
LBKEigenvalueSolver/IterativeOperations/: lbkes_computeproduction.cc
LBKEigenvalueSolver/lua/: lbkes_createsolver.cc  lbkes_execute.cc  lbkes_initialize.cc  lbkes_setproperty.cc  lua_register.h
Test/: KEigenvalueTransport1D_1G.lua  KEigenvalueTransport1D_3G.lua  Z_Run_all.py  three_grp.csx
